# CLOVER

./: .gitattributes  .gitignore  .pylintrc  .yamllint-config.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Notes.ipynb  README.md  SECURITY.md  TODO  UPDATE REGISTER.rtf  codemeta.json  global_settings.yaml  hamish_script.py  mypy.ini  outbox_assembly_script.py  paper.bib  paper.md  pytest.ini  requirements.txt  setup.cfg  weatherdata.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: black.yml  codeql-analysis.yml  mypy-package.yml  mypy.yml  open_journals_pdf_generator.yml  pylint.yml  pytest.yml  yamllint.yml
Locations/: CLOVER Quick Start Guide2.rtf
Scripts/Conversion scripts/: Conversion.py
Scripts/Generation scripts/: Diesel.py  Grid.py  Solar.py
Scripts/Impact scripts/: Finance.py  GHGs.py
Scripts/Load scripts/: Load.py
Scripts/Optimisation scripts/: Optimisation.py
Scripts/Simulation scripts/: Energy_System.py
Scripts/conversion/: conversion.py
Scripts/generation/: grid.py
Scripts/impact/: finance.py
Scripts/load/: load.py
Scripts/optimisation/: optimisation.py
Scripts/simulation/: energy_system.py
Testing_python/: How clover should work.txt  Main_testing.py  Sample_code_dynamic_pricing.py  battery_data.py  diesel_inputs.py  diesel_inputs_empty.py  finance_inputs.py  grid_inputs.py  importing_test.py  location.py  main_test_data.py  parse_grid_input.py  scenario.py  solar_generation_inputs.py  test_running_yaml.py  writing_data.py  yaml_import_data_test.yaml
clover/: __main__.py  __utils__.py  analysis.py  argparser.py  fileparser.py
clover/conversion/: conversion.py
clover/data/: new_location.yaml
clover/generation/: __utils__.py  (+5 more)
docs/: Electricity-Generation.md  General-Setup.md  Load-Profiles.md  Overview.md  README.md  Simulation.md  conf.py  index.rst  requirements.txt
sensitivity_outputs/: load_time_1.xlsx  load_time_2.xlsx  load_time_3.xlsx  load_time_4.xlsx  load_time_5.xlsx
src/: new_location.yaml
(+445 files in other folders)
