[metadata]
name = CLOVER-minigrid
version = 4.1.0
author = Phil Sandwell, Ben Winchester and Hamish Beath
author_email = philip.sandwell@gmail.com, benedict.winchester@gmail.com
description = Continuous Lifetime Optimisation of Variable Electricity Resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phil-sandwell/CLOVER
project_urls =
    Bug Tracker = https://github.com/phil-sandwell/CLOVER/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = clover
packages = find:
python_requires = >=3.7

[options.packages.find]
where = clover