[metadata]
name = clover-energy
version = 5.1.0.post1
author = Phil Sandwell, Ben Winchester and Hamish Beath
author_email = philip.sandwell@gmail.com,benedict.winchester@gmail.com,hamishbeath@outlook.com
description = Continuous Lifetime Optimisation of Variable Electricity Resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CLOVER-energy/CLOVER
project_urls =
    Bug Tracker = https://github.com/CLOVER-energy/CLOVER/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy >=1.20.1
    pandas >=1.2.3
    PyYAML >=5.4.1
    requests >=2.25.1
    seaborn >=0.11.1
    scikit-learn >= 1.0
    scipy >=1.6.2
    tqdm >=4.59.0
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    clover = clover.scripts.clover:main
    clover-hpc = clover.scripts.clover_hpc_clover:main
    hpc-outbox-assembly = clover.scripts.clover_hpc_outbox_assembly:main
    new-clover-location = clover.scripts.clover_new_location:main
    update-api-token = clover.scripts.clover_update_api_token:main

[options.packages.find]
where = src

[options.package_data]
* = new_location.yaml
